k8s/nird/neo4j/01-neo4j-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neo4j
  namespace: elixir-uit-ns11105k
spec:
  serviceName: neo4j
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
        - name: neo4j
          image: neo4j:5-community   # pick any tag you like
          ports:
            - containerPort: 7474  # HTTP
            - containerPort: 7687  # Bolt
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates: [ ]
