k8s/nird/neo4j/02-neo4j-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  namespace: elixir-uit-ns11105k
spec:
  selector:
    app: neo4j
  ports:
    - name: browser
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
