k8s/nird/neo4j/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-service
  namespace: elixir-uit-ns11105k
spec:
  selector:
    app: neo4j
  ports:
    - name: http
      port: 7474
      targetPort: 7474
    - name: bolt
      port: 7687
      targetPort: 7687
  type: ClusterIP
